# A-Monogoose-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: gl_loader.c.1275F7C93EB230F6.idx  gl_loader.h.0511AA94A890E4AB.idx  main.c.7A76C3845DB1EAFD.idx
cpp/unitylike/: CameraFacade.cpp  Collider2D.cpp  Components.cpp  InputTime.cpp  Material.cpp  MeshRenderer.cpp  Rigidbody2D.cpp  Scene.cpp  Scene.h  SceneCore.cpp  SpriteRenderer.cpp  TextRenderer.cpp  TilemapRenderer.cpp  Time.cpp  Transform.cpp  TransformHierarchy.cpp  TransformHierarchy.h
dialogues/: route.yaml  sample.yaml
docs/: AGENT_HANDOFF.md  AGENT_HANDOFF_2025-08-25.md  ARCHITECTURE.md  ROADMAP.md  TUTORIAL.md  UNITYLIKE_API.md  UNITY_API_GAPS.md  UNITY_API_GAPS2.md  text_rendering.md
docs/unitylike/: api.md  example.md  mapping.md  overview.md  pong_tutorial.md  roadmap.md
examples/audio_opus_example/: 1460797_Convicts.opus  README.md  main.c
examples/audio_pan_example/: main.c
examples/audio_ray_example/: main.c
examples/dialogue_example/: main.c
examples/dialogue_ui_example/: main.c
examples/example_parent_child/: CMakeLists.txt  main.cpp
examples/flecs_scene/: main.c
examples/flecs_script_scene/: main.c  platformer_example.flecs
examples/kenney_pixel-platformer/: level.tmj  main.c
examples/kenney_pixel-platformer/prompts/: README.md  assets_layout.md  components.md  example_assembly.md  resources.md
examples/kenney_pixel-platformer/prompts/subsystems/: audio_thread_and_sync.md  gl_setup_and_batch.md  input_backend.md  physics_and_collision.md  spritesheets_and_animation.md  tilemap_and_tilepass.md
examples/kenney_pixel-platformer/prompts/systems/: Animation.md  AudioUpdate.md  CameraFollow.md  GroundCheck.md  InputGather.md  MovementAndJump.md  PostStateMirror.md
examples/line_draw/: main.c
examples/memory_game_cpp/: Card.h  Game.cpp  Game.h  GameManager.h  main.cpp
examples/obj_loading/: CMakeLists.txt  main.cpp  test dimensions.blend  test dimensions.blend1  test dimensions.mtl
examples/raymarch_arcade/: main.c
examples/rhythm_game/: main.c
examples/scene_file/: load_scene2.c  main_level.amongoose.yaml  scene_loader  scene_loader.c  scene_loader.h  scene_script_example.c  scene_yaml_to_flecs_json.c
examples/scene_file/tests/: test_scene.c
examples/scene_file/trash/: CMakeLists.txt  example_usage.c  flecs_impl.c  main_level.amongoose.yaml  scene_loader.c  scene_loader.h  scene_roundtrip_safe.cpp  scene_yaml_to_flecs_json.c  scheme.amongoose.json  world_to_scene.c  world_to_scene.h
examples/scene_file/trash/src/: roundtrip_main.cpp  scene_model.hpp  scene_yaml.cpp  world_interop.cpp
examples/scene_file/trash/tests/: test_scene
examples/text_editor/: main.c
examples/tilemap_render/: main.c  sample.tmj
examples/unitylike_box2d_car/: CMakeLists.txt  CarCameraController.h  CarController.h  GameManager.h  input_local.cpp  input_local.h
examples/unitylike_minimal/: CMakeLists.txt  CameraFollow.h  PlayerController.h  SpriteMover.h  json_schema_validator.h  main.cpp
examples/unitylike_pixel_platformer/: CMakeLists.txt  PhysicsWorldBehaviour.h  PlayerController.h  SceneBuilder.h  TilemapCompositor.h  input_local.cpp  input_local.h  main.cpp
examples/unitylike_platformer_ecs/: CMakeLists.txt  CameraController.h  DebugRenderer.h  GameManager.h  PhysicsManager.h  PlayerBehaviour.h  README_IMPROVEMENTS.md  input_local.h  main.cpp
include/: ame_dialogue.h  ame_story_route.h
include/ame/: acoustics.h  audio.h  audio_ray.h  camera.h  collider2d_extras.h  collider2d_system.h  coords.glsl  coords.h  ecs.h  input_bridge.h  obj.h  physics.h  render_pipeline.h  render_pipeline_ecs.h  scene2d.h  text_system.h  tilemap.h  tilemap_tmx.h
prompts/: unitylike_facade_next_steps.md
src/: audio.c  audio_ray.c  camera.c  collider2d_extras.cpp  collider2d_system.c  dialogue.c  ecs.c  embedded_dialogues.c  embedded_dialogues_gen.c  gl_loader.c  gl_loader.h  main.c  obj.c  obj_tinyobj.cpp  physics.cpp  render_pipeline.c  render_pipeline_ecs.cpp  render_pipeline_ecs_enhanced.cpp  story_route.c  text_system.c  tilemap.c  tilemap_tmx.c
tests/: scene_reflection.c  scene_roundtrip.c  scene_yaml_meaning.c
tools/: dialogue_yaml_to_c.py
